Adds Navigation Graph for backend API. Updates documentation.
